--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -131,7 +131,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure id = "linux">
                 <img class = "Langage" src="asset/linux.jpg" alt="linux">
                 <figcaption>
                     <p>Linux</p>
@@ -170,8 +170,8 @@
     </main>
     <footer>
         <p>&copy; Morgane Reynaud - 2021</p>
-        <a href="index2.html"><u>Donner votre avis</u></a>
-        <a href="#"><u><br> vers le Haut de la page</u></a>
+        <a href="index2.html">Donner votre avis</a>
+        <a href="#"><br> vers le Haut de la page</a>
     </footer>
     
 </body>
