--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </h2>
             <h3>Appuis et support utilsateurs</h3>
             <h4> EDF</h4>
-            <p><i><u>Septembre 2021 - Actuellement</u></i></p>
+            <h5>Septembre 2021 - Actuellement</h5>
             <p> 
                 Accompagne et résoud les problèmes informatiques des Utilisateurs au sein du service informatique.<br>
                 Gestion des demandes et suppresions d'habilitations des agents. Gestion des demandes Wizmi.<br>
@@ -42,27 +42,27 @@
 
             <h3>Professeur à Domicile</h3>
             <h4> Ile-de-France</h4>
-            <p><i><u>Octobre 2018 – Actuellement</u></i></p>
+            <h5>Octobre 2018 – Actuellement</h5>
             <p>
                 Cours Mathématiques niveaux collège/ lycée.
             </p>
 
             <h3>Animatrice</h3>
             <h4> Bussy Saint-Georges</h4>
-            <p><i><u>Août 2019, Décembre 2019, Février 2020, Février 2021- juillet 2021 </u></i></p>
+            <h5>Août 2019, Décembre 2019, Février 2020, Février 2021- juillet 2021 </h5>
             <p>
                 Encadrement d’enfants de 3 ans à 10 ans.
                 1 mois en Août, une semaine pour Décembre et Février.
             </p>
             <h4> Sandaya les vagues</h4>
-            <p><i><u>Juin-septembre 2020</u></i></p>
+            <h5>Juin-septembre 2020</h5>
             <p>
                 Encadrement d’enfants de 5 ans à 12 ans 
                 polyvalence ( animation enfants et adultes).
             </p>
 
             <h4> UCPA Saint-Médard-en-Jalles</h4>
-            <p><i><u>Juillet 2019</u></i></p>
+            <h5>Juillet 2019</h5>
             <p>
                 Encadrement d’enfants de 6 ans à 17 ans, durant 3 semaines.
             </p>
@@ -75,25 +75,25 @@
             </h2>
             <h3>BTS SIO en Alternance </h3>
             <h4>ITIC, Paris</h4>
-            <p><i><u>Septembre 2021 - Actuellement</u></i></p>
+            <h5>Septembre 2021 - Actuellement</h5>
 
             <h3>Licence Mathématiques/Informatique</h3>
             <h4>Champs-sur-Marne</h4>
-            <p><i><u>Septembre 2018 - Janvier 2021</u></i></p>
+            <h5>Septembre 2018 - Janvier 2021</h5>
             <p>
                 Ancienne étudiante. Diplôme non obtenu. 
             </p>
 
             <h3>BAFA (Brevet d’Aptitude aux Fonctions d’Animateur)</h3>
             <h4>Nogent-sur-Marne, Paris</h4>
-            <p><i><u>Avril 2019 - Août 2021</u></i></p>
+            <h5>Avril 2019 - Août 2021</h5>
             <p>
                 Formation entière réalisée. Diplome obtenu.
             </p>
 
             <h3>Baccalauréat</h3>
             <h4>Jehan de Chelles</h4>
-            <p><i><u>Septembre 2017 - Juin 2018</u></i></p>
+            <h5>Septembre 2017 - Juin 2018</h5>
             <p>
                 BAC scientifique spécialisation mathématiques.
             </p>
@@ -106,13 +106,13 @@
             </h2>
            
             <figure>
-                <img class = "Langage" src="asset/python.jpg" alt="python">
+                <img class = "Langage" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.fGp1jPCRDUNNTQiM0X3L6QHaGK%26pid%3DApi&f=1" alt="python">
                 <figcaption>
                     <p>Python</p>
                 </figcaption>
             </figure>
             <figure>
-                <img class = "Langage" src="asset/java.jpg" alt="java">
+                <img class = "Langage" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fblog.hani-ibrahim.de%2Fwp-content%2Fuploads%2Fjava.featured.jpg&f=1&nofb=1" alt="java">
                 <figcaption>
                     <p>Java</p>
                 </figcaption>
