--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
         <p>&copy; Morgane Reynaud - 2021</p>
         <a href="index2.html">Donner votre avis</a>
         <a href="#"><br> vers le Haut de la page</a>
+        <p>Contact :</p>
+        <a href="mailto:morgane.reynaud2000@gmail.com">morgane.reynaud2000@gmail.com</a>
+        <br>
+        <a href="https://www.linkedin.com/in/morgane-reynaud-70625014b">Linkedin</a>
     </footer>
     
 </body>
