--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
         <a href="index2.html">Donner votre avis</a>
         <a href="#"><br> vers le Haut de la page</a>
         <p>Contact :</p>
-        <a href="mailto:morgane.reynaud2000@gmail.com">morgane.reynaud2000@gmail.com</a>
+        <a href="mailto:morgane.reynaud2000@gmail.com" target="_blank" >morgane.reynaud2000@gmail.com</a>
         <br>
-        <a href="https://www.linkedin.com/in/morgane-reynaud-70625014b">Linkedin</a>
+        <a href="https://www.linkedin.com/in/morgane-reynaud-70625014b" target="_blank">Linkedin</a>
     </footer>
     
 </body>
